--- a/docs/styles/custom.css
+++ b/docs/styles/custom.css
@@ -24,3 +24,14 @@ a {
 a:hover {
     color: #c2185b;
 }
+
+.md-content p {
+    text-align: center;
+}
+
+.container {
+    display: flex;
+    justify-content: center; /* Alinha horizontalmente no centro */
+    align-items: center; /* Alinha verticalmente no centro, caso necessário */
+     /* Ajuste conforme necessário */
+}
